--- a/cleaned_data.ipynb
+++ b/cleaned_data.ipynb
@@ -76,7 +76,7 @@
        "      <td>Non-Profit</td>\n",
        "      <td>$100 to $500 million (USD)</td>\n",
        "      <td>-1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>TRUE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -152,7 +152,7 @@
        "      <td>Arts, Entertainment &amp; Recreation</td>\n",
        "      <td>$100 to $500 million (USD)</td>\n",
        "      <td>DraftKings</td>\n",
-       "      <td>True</td>\n",
+       "      <td>TRUE</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,11 +202,11 @@
        "4               Sports & Recreation  Arts, Entertainment & Recreation   \n",
        "\n",
        "                      Revenue Competitors Easy Apply  \n",
-       "0  $100 to $500 million (USD)          -1       True  \n",
+       "0  $100 to $500 million (USD)          -1       TRUE  \n",
        "1      $2 to $5 billion (USD)          -1         -1  \n",
        "2    Unknown / Non-Applicable     GoDaddy         -1  \n",
        "3   $50 to $100 million (USD)          -1         -1  \n",
-       "4  $100 to $500 million (USD)  DraftKings       True  "
+       "4  $100 to $500 million (USD)  DraftKings       TRUE  "
       ]
      },
      "execution_count": 2,
@@ -1241,7 +1241,7 @@
    ],
    "source": [
     "# Drop rows with -1 in them to see how many jobs left\n",
-    "# NOTE: Rating isn't dropping - need to review\n",
+    "# NOTE: Rating isn't dropping - needed to polish as an xlsx file\n",
     "clean_job_df = job_df[job_df[\"Headquarters\"] !=\"-1\"]\n",
     "clean_job_df = clean_job_df[clean_job_df[\"Industry\"] !=\"-1\"]\n",
     "clean_job_df = clean_job_df[clean_job_df[\"Sector\"] !=\"-1\"]\n",
@@ -1254,7 +1254,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1341,6 +1343,263 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Job Title</th>\n",
+       "      <th>Salary Estimate</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Headquarters</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Type of ownership</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Data Analyst, Center on Immigration and Justic...</td>\n",
+       "      <td>$37K-$66K (Glassdoor est.)</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>Vera Institute of Justice\\n3.2</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>201 to 500 employees</td>\n",
+       "      <td>Nonprofit Organization</td>\n",
+       "      <td>Social Assistance</td>\n",
+       "      <td>Non-Profit</td>\n",
+       "      <td>$100 to $500 million (USD)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Quality Data Analyst</td>\n",
+       "      <td>$37K-$66K (Glassdoor est.)</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>Visiting Nurse Service of New York\\n3.8</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>10000+ employees</td>\n",
+       "      <td>Nonprofit Organization</td>\n",
+       "      <td>Health Care Services &amp; Hospitals</td>\n",
+       "      <td>Health Care</td>\n",
+       "      <td>$2 to $5 billion (USD)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Senior Data Analyst, Insights &amp; Analytics Team...</td>\n",
+       "      <td>$37K-$66K (Glassdoor est.)</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>Squarespace\\n3.4</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>1001 to 5000 employees</td>\n",
+       "      <td>Company - Private</td>\n",
+       "      <td>Internet</td>\n",
+       "      <td>Information Technology</td>\n",
+       "      <td>Unknown / Non-Applicable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>$37K-$66K (Glassdoor est.)</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>Celerity\\n4.1</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>McLean, VA</td>\n",
+       "      <td>201 to 500 employees</td>\n",
+       "      <td>Subsidiary or Business Segment</td>\n",
+       "      <td>IT Services</td>\n",
+       "      <td>Information Technology</td>\n",
+       "      <td>$50 to $100 million (USD)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Reporting Data Analyst</td>\n",
+       "      <td>$37K-$66K (Glassdoor est.)</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>FanDuel\\n3.9</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>501 to 1000 employees</td>\n",
+       "      <td>Company - Private</td>\n",
+       "      <td>Sports &amp; Recreation</td>\n",
+       "      <td>Arts, Entertainment &amp; Recreation</td>\n",
+       "      <td>$100 to $500 million (USD)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Job Title  \\\n",
+       "0  Data Analyst, Center on Immigration and Justic...   \n",
+       "1                               Quality Data Analyst   \n",
+       "2  Senior Data Analyst, Insights & Analytics Team...   \n",
+       "3                                       Data Analyst   \n",
+       "4                             Reporting Data Analyst   \n",
+       "\n",
+       "              Salary Estimate  Rating  \\\n",
+       "0  $37K-$66K (Glassdoor est.)     3.2   \n",
+       "1  $37K-$66K (Glassdoor est.)     3.8   \n",
+       "2  $37K-$66K (Glassdoor est.)     3.4   \n",
+       "3  $37K-$66K (Glassdoor est.)     4.1   \n",
+       "4  $37K-$66K (Glassdoor est.)     3.9   \n",
+       "\n",
+       "                              Company Name      Location  Headquarters  \\\n",
+       "0           Vera Institute of Justice\\n3.2  New York, NY  New York, NY   \n",
+       "1  Visiting Nurse Service of New York\\n3.8  New York, NY  New York, NY   \n",
+       "2                         Squarespace\\n3.4  New York, NY  New York, NY   \n",
+       "3                            Celerity\\n4.1  New York, NY    McLean, VA   \n",
+       "4                             FanDuel\\n3.9  New York, NY  New York, NY   \n",
+       "\n",
+       "                     Size               Type of ownership  \\\n",
+       "0    201 to 500 employees          Nonprofit Organization   \n",
+       "1        10000+ employees          Nonprofit Organization   \n",
+       "2  1001 to 5000 employees               Company - Private   \n",
+       "3    201 to 500 employees  Subsidiary or Business Segment   \n",
+       "4   501 to 1000 employees               Company - Private   \n",
+       "\n",
+       "                           Industry                            Sector  \\\n",
+       "0                 Social Assistance                        Non-Profit   \n",
+       "1  Health Care Services & Hospitals                       Health Care   \n",
+       "2                          Internet            Information Technology   \n",
+       "3                       IT Services            Information Technology   \n",
+       "4               Sports & Recreation  Arts, Entertainment & Recreation   \n",
+       "\n",
+       "                      Revenue  \n",
+       "0  $100 to $500 million (USD)  \n",
+       "1      $2 to $5 billion (USD)  \n",
+       "2    Unknown / Non-Applicable  \n",
+       "3   $50 to $100 million (USD)  \n",
+       "4  $100 to $500 million (USD)  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_job_df = clean_job_df.dropna()\n",
+    "clean_job_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1894.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.637012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.931203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Rating\n",
+       "count  1894.000000\n",
+       "mean      3.637012\n",
+       "std       0.931203\n",
+       "min      -1.000000\n",
+       "25%       3.300000\n",
+       "50%       3.700000\n",
+       "75%       4.100000\n",
+       "max       5.000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_job_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
