Updated ML model

--- a/ML_models.ipynb
+++ b/ML_models.ipynb
@@ -2936,6 +2936,16 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "fe30b5c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelencoder = LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "9f644830",
    "metadata": {},
    "outputs": [
@@ -2945,19 +2955,19 @@
        "array([1, 1, 1, ..., 5, 5, 5])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_label = LabelEncoder().fit_transform(df['NewSalaryEstimate'])\n",
+    "y_label = labelencoder.fit_transform(df['NewSalaryEstimate'])\n",
     "y_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "10dd2a29",
    "metadata": {},
    "outputs": [
@@ -2968,7 +2978,7 @@
        "       '$110K-$190K'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2979,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "2f2e5b0e",
    "metadata": {},
    "outputs": [],
@@ -2989,7 +2999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "d4344bb6",
    "metadata": {},
    "outputs": [
@@ -3011,7 +3021,7 @@
        "        -0.17213259, -0.33199946]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3025,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "fe8c73b8",
    "metadata": {},
    "outputs": [
@@ -3047,7 +3057,7 @@
        "        -0.17213259,  3.01205308]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3060,7 +3070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "26eeb60b",
    "metadata": {},
    "outputs": [],
@@ -3071,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "d6c9108c",
    "metadata": {},
    "outputs": [],
@@ -3081,7 +3091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "cd26ccdc",
    "metadata": {
     "scrolled": true
@@ -3105,7 +3115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "9c2383b9",
    "metadata": {
     "scrolled": true
@@ -3129,7 +3139,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
+   "id": "08e5a083",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['$110K-$190K', '$20K-$50K', '$56K-$70K', '$71K-$80K', '$81K-$90K',\n",
+       "       '$91K-$109K'], dtype=object)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelencoder.inverse_transform([0,1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ea18396e",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['$71K-$80K', '$91K-$109K', '$20K-$50K', '$71K-$80K', '$56K-$70K',\n",
+       "       '$81K-$90K', '$56K-$70K', '$20K-$50K', '$56K-$70K', '$56K-$70K'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelencoder.inverse_transform(predictions[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2d6c3e1c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "my_unique, my_frequency = np.unique(labelencoder.inverse_transform(predictions),return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "789b2743",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['$110K-$190K', 39],\n",
+       "       ['$20K-$50K', 94],\n",
+       "       ['$56K-$70K', 136],\n",
+       "       ['$71K-$80K', 89],\n",
+       "       ['$81K-$90K', 50],\n",
+       "       ['$91K-$109K', 56]], dtype=object)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray((my_unique, my_frequency)).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "dc55f334",
    "metadata": {
     "scrolled": true
@@ -3238,7 +3335,7 @@
        "[464 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3249,7 +3346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "c3c30ed1",
    "metadata": {
     "scrolled": true
@@ -3261,7 +3358,7 @@
        "['ML_models.sav']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
